--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -111,6 +111,14 @@ h1 {
 </head>
 
 <h1 id="myHeader">My name is Dean. I am 16 and Live in Coronado. I like bits</h1>
+<p id="classes">Next year My classes are:</p>
+<p id="classes">Physics</p>
+<p id="classes">Pre Algebra</p>
+<p id="classes">Ap lit</p>
+<p id="classes">AP US History:</p>
+<p id="classes">Ceramics</p>
+<p id="classes">Weight Training</p>
+
 
 
 <style>
