--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -82,8 +82,8 @@ body {margin:0;}
 <a href="https://scratch.mit.edu/projects/247559517/" target="_blank" >Scratch Soccer Game</a> </p>
 <a href="https://scratch.mit.edu/projects/245460807/"target="_blank" >Scratch First Game</a> </p>
 <a href="http://ai2.appinventor.mit.edu/?locale=en#5028335416639488"target="_blank" >MIT APP Inventor Link</a> </p>
-<a href="/images/map.apk"target="_blank" >Map App</a> </p>
 <a href="https://repl.it/@deanh505/President-Game"target="_blank" >Text based python story</a> </p>
+<a href="http://ai2.appinventor.mit.edu/?locale=en#4700114342510592"target="_blank" >Create Task Map App</a> </p>
 
 
 
