--- a/my_website/resume.html
+++ b/my_website/resume.html
@@ -89,7 +89,9 @@ img {
 </head>
 <body>
   
-<img src="images/res.jpg" alt="Picture of Resume" width="700" height="1000" > 
+<img src="pic/resume2.jpg" alt="Picture of Resume" width="800" height="1000" > 
+<img src="pic/resume22.jpg" alt="Picture of Resume" width="800" height="1000" >
+
 
 <style>
 
